use auto width for the map. fix overlapping after resize

--- a/src/content/assets/css/style.css
+++ b/src/content/assets/css/style.css
@@ -24,7 +24,7 @@ blockquote.blockquote {
 
 #map {
   height: 800px;
-  width: 600px;
+  width: auto;
 }
 
 .post {
